# manchester-united-fc

./: .gitignore  .vercelignore  DEPLOY.md  README.md  pyproject.toml  vercel.json
analysis/: __init__.py  __main__.py  _verify.py  characterise.py  corners.py  data.py  freeze_frames.py  goal_kicks.py  report.py  viz.py  xthreat.py
docs/: data_characterisation.md  methodology.md
reports/: index.html  leicester-1516.html  letter.html  styles.css
